--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,9 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+// Internal
+@import "components/avatar";
+@import "components/cards";
+@import "components/banner";
+@import "components/navbar";
