--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,13 @@
 <div class="container">
-  <h1>Restaurants</h1>
-  <% @restaurants.each do |restaurant| %>
-    <p class="m-0"><%= link_to restaurant.name, restaurant_path(restaurant), class: 'btn-light' %></p>
-    <small><%= restaurant.address %></small>
-  <% end %>
+  <div class="d-flex justify-content-between align-items-center mt-3">
+    <h1>Restaurants</h1>
+    <%= link_to new_restaurant_path do %>
+      <i class="fas fa-plus-square btn-light"></i>
+    <% end %>
+  </div>
+  <div class="cards mb-5">
+    <% @restaurants.each do |restaurant| %>
+      <%= render 'restaurants/card', restaurant: restaurant %>
+    <% end %>
+  </div>
 </div>
