--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,27 +20,25 @@
         </p>
       </div>
       <p class="fw-lighter opacity-75 mt-2"><%= Faker::Restaurant.description  %></p>
-      <h3>Reviews</h3>
-      <% if @restaurant.reviews.any? %>
-        <ul>
+      <h3><%= pluralize @restaurant.reviews.size, "Review" %></h3>
+      <div id="reviews">
+        <% if @restaurant.reviews.blank? %>
+          Be the first to review for <%= @restaurant.name %>!
+        <% else %>
           <% @restaurant.reviews.each do |review| %>
-            <div class="d-flex">
-              <li><%= review.content %></li>
-              <%= link_to 'x', review_path(review), method: :delete, data: { confirm: 'Delete review?' }, class: 'ms-2 btn-light' %>
-            </div>
+            <%= render 'reviews/review', review: review %>
           <% end %>
-        </ul>
-      <% else %>
-        <%= link_to "Be the first to review!", new_restaurant_review_path(@restaurant), class: 'btn btn-light' %>
-      <% end %>
+        <% end %>
+      </div>
+      <h3 class='mt-3'>Add Review</h3>
+      <%= simple_form_for [@restaurant, @review], remote: true do |f| %>
+        <%#= simple_form_for([@restaurant, @review], remote: true) do |f| %>
+          <%= f.input :content %>
+          <%= f.submit class: 'btn btn-primary mt-2' %>
+        <% end %>
+      </div>
+      <div class="col-12 col-sm-4 mt-5">
+        <%= render 'restaurants/side_info' %>
+      </p>
     </div>
-    <div class="col-12 col-sm-4 mt-5">
-      <h1>Add Review</h1>
-      <%= simple_form_for [@restaurant, @review] do |f| %>
-        <%= f.input :content %>
-        <%= f.submit class: 'btn btn-primary mt-2' %>
-      <% end %>
-      <%= render 'restaurants/side_info' %>
-    </p>
   </div>
-</div>
